// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modules/manager/swift/index extractPackageFile() parses multiple packages 1`] = `
{
  "deps": [
    {
      "currentValue": ""master"
        ",
      "datasource": "git-tags",
      "depName": "0x7fs/CountedSet",
      "packageName": "https://github.com/0x7fs/CountedSet",
    },
    {
      "currentValue": "0.1.0",
      "datasource": "git-tags",
      "depName": "avito-tech/GraphiteClient",
      "packageName": "https://github.com/avito-tech/GraphiteClient.git",
    },
    {
      "currentValue": "1.0.16",
      "datasource": "git-tags",
      "depName": "IBM-Swift/BlueSignals",
      "packageName": "https://github.com/IBM-Swift/BlueSignals.git",
    },
    {
      "currentValue": ""UpdateSocket"
        ",
      "datasource": "git-tags",
      "depName": "beefon/Shout",
      "packageName": "https://github.com/beefon/Shout",
    },
    {
      "currentValue": "3.0.6",
      "datasource": "git-tags",
      "depName": "daltoniam/Starscream",
      "packageName": "https://github.com/daltoniam/Starscream.git",
    },
    {
      "currentValue": "1.4.6",
      "datasource": "git-tags",
      "depName": "httpswift/swifter",
      "packageName": "https://github.com/httpswift/swifter.git",
    },
    {
      "currentValue": "from : "0.9.6"",
      "datasource": "git-tags",
      "depName": "weichsel/ZIPFoundation",
      "packageName": "https://github.com/weichsel/ZIPFoundation/",
    },
    {
      "currentValue": ""swift-5.0-branch"
    ",
      "datasource": "git-tags",
      "depName": "apple/swift-package-manager",
      "packageName": "https://github.com/apple/swift-package-manager.git",
    },
  ],
  "packageFile": null,
}
`;

exports[`modules/manager/swift/index extractPackageFile() parses package descriptions 1`] = `
{
  "deps": [
    {
      "currentValue": "from:"1.2.3"",
      "datasource": "git-tags",
      "depName": "vapor/vapor",
      "packageName": "https://github.com/vapor/vapor.git",
    },
  ],
  "packageFile": null,
}
`;

exports[`modules/manager/swift/index extractPackageFile() parses package descriptions 2`] = `
{
  "deps": [
    {
      "currentValue": ""1.2.3"...",
      "datasource": "git-tags",
      "depName": "vapor/vapor",
      "packageName": "https://github.com/vapor/vapor.git",
    },
  ],
  "packageFile": null,
}
`;

exports[`modules/manager/swift/index extractPackageFile() parses package descriptions 3`] = `
{
  "deps": [
    {
      "currentValue": ""1.2.3"..."1.2.4"",
      "datasource": "git-tags",
      "depName": "vapor/vapor",
      "packageName": "https://github.com/vapor/vapor.git",
    },
  ],
  "packageFile": null,
}
`;

exports[`modules/manager/swift/index extractPackageFile() parses package descriptions 4`] = `
{
  "deps": [
    {
      "currentValue": ""1.2.3"..<"1.2.4"",
      "datasource": "git-tags",
      "depName": "vapor/vapor",
      "packageName": "https://github.com/vapor/vapor.git",
    },
  ],
  "packageFile": null,
}
`;

exports[`modules/manager/swift/index extractPackageFile() parses package descriptions 5`] = `
{
  "deps": [
    {
      "currentValue": "..."1.2.3"",
      "datasource": "git-tags",
      "depName": "vapor/vapor",
      "packageName": "https://github.com/vapor/vapor.git",
    },
  ],
  "packageFile": null,
}
`;

exports[`modules/manager/swift/index extractPackageFile() parses package descriptions 6`] = `
{
  "deps": [
    {
      "currentValue": "..<"1.2.3"",
      "datasource": "git-tags",
      "depName": "vapor/vapor",
      "packageName": "https://github.com/vapor/vapor.git",
    },
  ],
  "packageFile": null,
}
`;
